[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Daily coding adventures w/ Advent of Code 2022: https://adventofcode.com/2022"
authors = ["Taylor Bonar <32309887+tbonar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
